adcionada nova tag ao site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <title>meu primeiro site</title>
 </head>
-<body>
-    <p>ola mundo</p>
+<body>	
+	<h1>Bem vindo ao meu site bosta</h1>
+	<p>ola mundo</p>
 </body>
 </html>
