adcionando novo programa teste.c

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
     <title>meu primeiro site</title>
 </head>
-<body>	
-	<h1>Bem vindo ao meu site bosta</h1>
+<body>
+	<h1>bem vindo ao meu primeiro site</h1>
 	<p>ola mundo</p>
+    
 </body>
 </html>
