archives from repository refused

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>meu primeiro site</title>
-</head>
-<body>
-	<h1>bem vindo ao meu primeiro site</h1>
-	<p>ola mundo</p>
-    
-</body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Site Pessoal</title>
+  </head>
+  <body>
+      Ola Mundo
+  </body>
 </html>
