adicionada um pagina real

--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Site Pessoal</title>
-  </head>
-  <body>
-      Ola Mundo
-  </body>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="normalize.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    <header >          
+                  <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                      <li class="breadcrumb-item"><a href="tabelas.html">tabelas</a></li>
+                      <li class="breadcrumb-item"><a href="formulario.html">formularios</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">butoes</li>
+                    </ol>
+                  </nav>
+    </header>
+    <section>
+        <div class="container">
+            <h1>Meu site em bootstrap</h1>
+        </div>
+    </section>
+    <footer></footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
 </html>
