adcionado novos links no nav bar

--- a/tabelas.html
+++ b/tabelas.html
@@ -18,7 +18,9 @@
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="tabelas.html">tabelas</a></li>
                     <li class="breadcrumb-item"><a href="formulario.html">formularios</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">butoes</li>
+                    <li class="breadcrumb-item"><a href="botoes.html">Botões</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Quem sou</li>
+                    <li class="breadcrumb-item active" aria-current="page">contato</li>
                   </ol>
                 </nav>
   </header>
