adcionados botoes a page botoes

--- a/botoes.html
+++ b/botoes.html
@@ -27,7 +27,50 @@
     </header>
     <section>
         <div class="container">
-            <h1>Site em construçao</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="page-header">
+                        <h3>Botoes em diferentes tags</h3>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-default" name="botao">botao</a>
+                        <input class="btn btn default" type="submit" value="botao">
+                        <button class="btn btn-default">botao</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                        <div class="page-header">
+                            <h3>Botoes de aviso</h3>
+                        </div>
+                        <div>
+                            <button class="btn btn-default">botao</button>
+                            <button class="btn btn-primary">botao</button>
+                            <button class="btn btn-warning">botao</button>
+                            <button class="btn btn-info">botao</button>
+                            <button class="btn btn-link">botao</button>
+
+                        </div>
+    
+                    </div>
+
+                    <div class="row">
+                            <div class="col-md-6">
+                                    <div class="page-header">
+                                        <h3>Botoes do tipo bloco</h3>
+                                    </div>
+                                    <div>
+                                        <button class="btn btn-block btn-default">botao</button>
+                                        <button class="btn btn-block btn-primary">botao</button>
+                                        <button class="btn btn-block btn-warning">botao</button>
+                                        <button class="btn btn-block btn-info">botao</button>
+                                        <button class="btn btn-block btn-danger">botao</button>
+
+                                    </div>
+                
+                                </div>
+                    </div>
+
+            </div>
         </div>
     </section>
     <footer></footer>
