botao do tipo danger adcionado

--- a/botoes.html
+++ b/botoes.html
@@ -46,6 +46,7 @@
                             <button class="btn btn-default">botao</button>
                             <button class="btn btn-primary">botao</button>
                             <button class="btn btn-warning">botao</button>
+                            <button class="btn btn-danger">botao</button>
                             <button class="btn btn-info">botao</button>
                             <button class="btn btn-link">botao</button>
 
