--- a/botoes.html
+++ b/botoes.html
@@ -74,7 +74,11 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer class="panel-footer navbar-fixed-bottom">
+            <div class="container">
+              <span class="text-muted">nocopiright web-site</span>
+            </div>
+          </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
