--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             <h1>Meu site em bootstrap</h1>
         </div>
     </section>
-    <footer></footer>
+    <footer class="panel-footer navbar-fixed-bottom">
+            <div class="container">
+              <span class="text-muted">nocopiright web-site</span>
+            </div>
+          </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
