--- a/tabelas.html
+++ b/tabelas.html
@@ -19,6 +19,7 @@
                     <li class="breadcrumb-item"><a href="tabelas.html">tabelas</a></li>
                     <li class="breadcrumb-item"><a href="formulario.html">formularios</a></li>
                     <li class="breadcrumb-item"><a href="botoes.html">Botões</a></li>
+                    <li class="breadcrumb-item"><a href="img.html">Imagens</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Quem sou</li>
                     <li class="breadcrumb-item active" aria-current="page">contato</li>
                   </ol>
