adcionando um footer decente denovo

--- a/botoes.html
+++ b/botoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pagina inicial</title>
+    <title>Botões</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-    <footer class="panel-footer navbar-bottom">
+    <footer class="panel-footer navbar-fixed-bottom">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
