--- a/img.html
+++ b/img.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pagina inicial</title>
+    <title>Imagens</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
@@ -28,10 +28,45 @@
     </header>
     <section>
         <div class="container">
-            <h1>Meu site em bootstrap</h1>
+
+            <div class="page-header">
+                    <h1>Imagens reponsivas</h1>
+            </div>
+
+            <div class="row"> <!--inicio row-->
+                <div class="col-md-6">
+                    <h3>Imagem responsiva</h3>
+                    <img src="img/uvas.png" alt="" class="img-responsive">
+                </div>
+                <div class="col-md-6">
+                    <h3>Imagem responsiva</h3>
+                    <img src="img/uvas.png" alt="">
+                </div>
+            </div><!--fim row-->
+
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Tipos de imagens no bootstrap</h3>
+                    <p>imagem tipo circulo </p>
+                    <img src="img/uvas.png" alt="" class="img-responsive img-circle">
+                </div>
+                <div class="col-md-6">
+                        <h3>Tipos de imagens no bootstrap</h3>
+                        <p>imagem tipo borda arredondada </p>
+                        <img src="img/uvas.png" alt="" class="img-responsive img-rounded">
+                    </div>
+                    <div class="col-md-12">
+                            <h3>Tipos de imagens no bootstrap</h3>
+                            <p>imagem tipo thumbail </p>
+                            <img src="img/uvas.png" alt="" class="img-responsive img-thumbnail">
+                        </div>
+                       
+            </div>
+
+
         </div>
     </section>
-    <footer class="panel-footer navbar-fixed-bottom">
+    <footer class="panel-footer fixed-bottom">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
