adcionando um footer decente denovo

--- a/botoes.html
+++ b/botoes.html
@@ -21,6 +21,7 @@
                       <li class="breadcrumb-item"><a href="formulario.html">formularios</a></li>
                       <li class="breadcrumb-item"><a href="botoes.html">Botões</a></li>
                       <li class="breadcrumb-item"><a href="img.html">Imagens</a></li>
+                      <li class="breadcrumb-item"><a href="navbar.html">Nav-bar</a></li>
                       <li class="breadcrumb-item active" aria-current="page">Quem sou</li>
                       <li class="breadcrumb-item active" aria-current="page">contato</li>
                     </ol>
