adcionado novo menu

--- a/img.html
+++ b/img.html
@@ -14,17 +14,43 @@
 </head>
 <body>
     <header >          
-                  <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                      <li class="breadcrumb-item"><a href="tabelas.html">tabelas</a></li>
-                      <li class="breadcrumb-item"><a href="formulario.html">formularios</a></li>
-                      <li class="breadcrumb-item"><a href="botoes.html">Botões</a></li>
-                      <li class="breadcrumb-item"><a href="img.html">Imagens</a></li>
-                      <li class="breadcrumb-item"><a href="navbar.html">Nav-bar</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Quem sou</li>
-                      <li class="breadcrumb-item active" aria-current="page">contato</li>
-                    </ol>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="index.html">HOME</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Bootstrap
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="tabelas.html">Tabelas</a>
+                            <a class="dropdown-item" href="formulario.html">Formularios</a>
+                            <a class="dropdown-item" href="botoes.html">Botôes</a>
+                            <a class="dropdown-item" href="img.html">imagens</a>
+
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Em construçao</a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#">Disabled</a>
+                        </li>
+                      </ul>
+                      <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                      </form>
+                    </div>
                   </nav>
     </header>
     <section>
@@ -67,7 +93,7 @@
 
         </div>
     </section>
-    <footer class="panel-footer fixed-bottom">
+    <footer class="card-footer bottom">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
