Adcionado nova tabela no pagina tabelas

--- a/tabelas.html
+++ b/tabelas.html
@@ -53,6 +53,7 @@
                       </nav>
   </header>
     <section>
+      <!--Table 1-->
         <div class="container">
             <div class=" page-header">
                 <h3>Tabelas</h3>
@@ -85,6 +86,39 @@
                 </tbody>
             </table>
         </div>
+        <!--Table 2-->
+        <div class="container">
+          <div class=" page-header">
+              <h3>Tabelas</h3>
+
+          </div>
+          <table class="table table-hover table-striped">
+              <thead>
+                  <tr>
+                      <th>Computador</th>
+                      <th>marca</th>
+                      <th>preço</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr class=" info">
+                          <td>Positivo</td>
+                          <td>apple</td>
+                          <td>muitos $$$$$</td>
+                  </tr>
+                  <tr class="danger">
+                          <td>iphone</td>
+                          <td>apple</td>
+                          <td>muitos $$$$$</td>
+                      </tr>
+                      <tr class=" success ">
+                              <td>iphone</td>
+                              <td>apple</td>
+                              <td>muitos $$$$$</td>
+                          </tr>
+              </tbody>
+          </table>
+      </div>
     </section>
     <footer class="modal-footer navbar-inverse fixed-bottom">
             <div class="container">
