Adcionado nova tabela no pagina tabelas

--- a/tabelas.html
+++ b/tabelas.html
@@ -101,20 +101,20 @@
                   </tr>
               </thead>
               <tbody>
-                  <tr class=" info">
+                  <tr class="alert-info">
                           <td>Positivo</td>
-                          <td>apple</td>
-                          <td>muitos $$$$$</td>
+                          <td>Positivo</td>
+                          <td>2000</td>
                   </tr>
-                  <tr class="danger">
-                          <td>iphone</td>
-                          <td>apple</td>
-                          <td>muitos $$$$$</td>
+                  <tr class="alert-danger">
+                          <td>Lg slim</td>
+                          <td>Lg</td>
+                          <td>30000</td>
                       </tr>
                       <tr class=" success ">
-                              <td>iphone</td>
-                              <td>apple</td>
-                              <td>muitos $$$$$</td>
+                              <td>Dell i5</td>
+                              <td>Dell</td>
+                              <td>5000</td>
                           </tr>
               </tbody>
           </table>
