Adcionado nova tabela exemplo no pagina tabelas

--- a/tabelas.html
+++ b/tabelas.html
@@ -92,7 +92,7 @@
               <h3>Tabelas</h3>
 
           </div>
-          <table class="table table-hover table-striped">
+          <table class="table table-hover ">
               <thead>
                   <tr>
                       <th>Computador</th>
@@ -106,15 +106,15 @@
                           <td>Positivo</td>
                           <td>2000</td>
                   </tr>
-                  <tr class="alert-danger">
+                  <tr>
                           <td>Lg slim</td>
                           <td>Lg</td>
-                          <td>30000</td>
+                          <td class="alert-danger">30000</td>
                       </tr>
-                      <tr class=" success ">
+                      <tr class="alert-success">
                               <td>Dell i5</td>
                               <td>Dell</td>
-                              <td>5000</td>
+                              <td  class="alert-success"> 5000</td>
                           </tr>
               </tbody>
           </table>
