--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                           </div>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link disabled" href="#">Disabled</a>
+                          <a class="nav-link disabled" href="#">Em pensamento</a>
                         </li>
                       </ul>
                       <form class="form-inline my-2 my-lg-0">
