Adcionado nova tabela exemplo no pagina tabelas

--- a/botoes.html
+++ b/botoes.html
@@ -146,7 +146,7 @@
             </div>
         </div>
     </section>
-    <footer class="modal-footer navbar-inverse fixed-bottom">
+    <footer class="footer fixed-bottom">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
