--- a/img.html
+++ b/img.html
@@ -63,7 +63,7 @@
             <div class="row"> <!--inicio row-->
                 <div class="col-md-6">
                     <h3>Imagem responsiva</h3>
-                    <img src="img/uvas.png" alt="" class="img-responsive">
+                    <img src="img/uvas.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <h3>Imagem responsiva</h3>
@@ -75,25 +75,36 @@
                 <div class="col-md-6">
                     <h3>Tipos de imagens no bootstrap</h3>
                     <p>imagem tipo circulo </p>
-                    <img src="img/uvas.png" alt="" class="img-responsive img-circle">
+                    <img src="img/uvas.png" alt="" class="img-fluid rounded-top">
                 </div>
                 <div class="col-md-6">
                         <h3>Tipos de imagens no bootstrap</h3>
                         <p>imagem tipo borda arredondada </p>
-                        <img src="img/uvas.png" alt="" class="img-responsive img-rounded">
+                        <img src="img/uvas.png" alt="" class="img-fluid float-left">
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-md-6">
                             <h3>Tipos de imagens no bootstrap</h3>
                             <p>imagem tipo thumbail </p>
-                            <img src="img/uvas.png" alt="" class="img-responsive img-thumbnail">
+                            <img src="img/uvas.png" alt="" class="img-fluid thumbnail">
                         </div>
+                        <div class="col-md-6">
+                            <h3>Tipos de imagens no bootstrap</h3>
+                            <p>imagem tipo thumbail </p>
+                            <img src="img/uvas.png" alt="" class="img-fluid rounded-circle">
+                        </div>
+                        <div class="col-md-6">
+                            <h3>Tipos de imagens no bootstrap</h3>
+                            <p>imagem tipo thumbail </p>
+                            <img src="img/uvas.png" alt="" class="img-fluid rounded-pill">
+                        </div>
+                        
                        
             </div>
 
 
         </div>
     </section>
-    <footer class="card-footer bottom">
+    <footer class="footer">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
