--- a/navbar.html
+++ b/navbar.html
@@ -58,7 +58,7 @@
            
 
     </section>
-    <footer class="modal-footer navbar-inverse fixed-bottom">
+    <footer class="footer">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
