--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h1>Meu site em bootstrap</h1>
         </div>
     </section>
-    <footer class="modal-footer navbar-inverse fixed-bottom">
+    <footer class="footer fixed-bottom">
             <div class="container">
               <span class="text-muted">nocopiright web-site</span>
             </div>
